--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,119 @@
-/* IMPOSTAZIONI GENERALI */
+body {
+  width: 450px;
+}
 
-/* HEADER */
 .header {
+  display: block;
+  width: 80%;
+  height: auto;
+  margin-left: 5%;
+  border: 1px solid rgb(0, 0, 0);
+  background-image: url("assets/img/sfondo.png");
+  background-image: linear-gradient(rgb(13, 94, 244), rgb(152, 219, 255));
 }
-/* MAIN */
+h1 {
+  font-size: 15px;
+  margin-left: 10%;
+}
+h2 {
+  font-size: 35px;
+  margin-left: 10%;
+}
+
+h3 {
+  font-size: 15px;
+  color: grey;
+  margin-left: 10%;
+}
+h4 {
+  display: inline;
+  border: 1px solid black;
+  background-color: rgba(137, 126, 126, 0.164);
+}
+
+h8 {
+  margin-left: 35%;
+  font-weight: 700;
+}
+table {
+  margin-left: 10%;
+  border: 1px solid black;
+}
+
+td {
+  border: 1px solid black;
+}
+h5 {
+  margin-left: 10%;
+}
+h6 {
+  margin-left: 10%;
+}
+h7 {
+  margin-left: 10%;
+}
+div.video {
+  margin-left: 4%;
+}
+iframe {
+  border-radius: 15px;
+}
+
+div.novità {
+  background-color: rgba(72, 68, 68, 0.215);
+  margin-top: 3%;
+  margin-left: 10%;
+  width: 80%;
+  border: 1px solid black;
+  padding-bottom: 5%;
+  margin-bottom: 15%;
+}
+button {
+  background-color: rgb(123, 123, 240);
+}
+p.novita {
+  font-size: 20px;
+  font-weight: 700;
+  margin-left: 35%;
+}
+form {
+  margin-left: 10%;
+}
+p {
+  margin-left: 5%;
+  font-size: 15px;
+}
+nav {
+  margin-left: 30%;
+  margin-bottom: 5%;
+}
+img.logo {
+  width: 80%;
+  height: auto;
+  margin-left: 10%;
+  margin-top: 7%;
+}
+
 main {
+  background-color: white;
+  width: 80%;
+  margin-top: 5%;
+  margin-left: 5%;
+  border: 1px solid rgb(0, 0, 0);
 }
-/* ELEMENTI NEL MAIN - ARTICLE */
+div.articoli {
+  margin-left: 5%;
+  width: 80%;
+  border: 1px solid black;
+  margin-bottom: 5%;
+  background-color: rgba(200, 177, 177, 0.232);
+}
 
-/* TABELLE */
-
-/* FORM */
-
-/* ELEMENTI NELL' ASIDE */
-
-/* FOOTER */
+footer {
+  width: 80%;
+  border: 1px solid black;
+  margin-top: 5%;
+  margin-left: 5%;
+  background-color: rgb(60, 89, 251);
+  background-image: linear-gradient(rgb(152, 219, 255), rgb(13, 94, 244));
+}
