--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
   width: 450px;
+  font-family: Poppins;
 }
 
 .header {
@@ -10,6 +11,7 @@ body {
   border: 1px solid rgb(0, 0, 0);
   background-image: url("assets/img/sfondo.png");
   background-image: linear-gradient(rgb(13, 94, 244), rgb(152, 219, 255));
+  box-shadow: 2px 2px;
 }
 h1 {
   font-size: 15px;
