--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
   border: 1px solid rgb(0, 0, 0);
   background-image: url("assets/img/sfondo.png");
   background-image: linear-gradient(rgb(13, 94, 244), rgb(152, 219, 255));
-  box-shadow: 2px 2px;
+  box-shadow: 3px 3px rgba(200, 186, 186, 0.64);
 }
 h1 {
   font-size: 15px;
@@ -34,17 +34,22 @@ h4 {
 }
 
 h8 {
-  margin-left: 35%;
+  margin-left: 30%;
   font-weight: 700;
 }
 table {
   margin-left: 10%;
+  border-bottom: 0px;
+}
+
+tr {
   border: 1px solid black;
 }
 
 td {
-  border: 1px solid black;
+  border-bottom: 1px solid #ddd;
 }
+
 h5 {
   margin-left: 10%;
 }
@@ -102,6 +107,8 @@ main {
   margin-top: 5%;
   margin-left: 5%;
   border: 1px solid rgb(0, 0, 0);
+  border-top: 0;
+  box-shadow: 4px black;
 }
 div.articoli {
   margin-left: 5%;
@@ -112,6 +119,7 @@ div.articoli {
 }
 
 footer {
+  box-shadow: 3px 3px rgba(200, 186, 186, 0.64);
   width: 80%;
   border: 1px solid black;
   margin-top: 5%;
